--- a/add.html
+++ b/add.html
@@ -5,6 +5,36 @@
     <title>Hero - Admin</title>
     <link rel="stylesheet" href="./css/bootstrap.css">
     <script src="./lib/jquery-1.12.2.js"></script>
+    <script src="./lib/template-web.js"></script>
+    <script>
+        // 添加英雄
+        function addHero() {
+            // 表单序列化
+            const params = $('#myform').serialize()
+            $.post('http://localhost:3001/addHero', params, (res) => {
+                console.log(res)
+            })
+        }
+        // 上传图片
+        function uploadImg() {
+            const formData = new FormData();
+            // 获取图片二进制
+            const file = $('#imageInput')[0].files[0];
+            formData.append('avatar', file);
+            $.ajax({
+                type: 'post',
+                url: 'http://localhost:3001/uploadFile',
+                data: formData,
+                contentType: false, // 禁止进行编码
+                processData: false, // 禁止对数据进行处理，因为我们的是二进制数据
+                success: function(res) {
+                    const jRes = JSON.parse(res)
+                    $("#displayImage").attr('src', 'http://localhost:3001/' + jRes.src);
+                    $('#uploadImage').val('http://localhost:3001/' + jRes.src)
+                }
+            })
+        }
+    </script>
 </head>
 
 <body>
@@ -15,6 +45,7 @@
     </header>
     <div class="container hero-list">
         <form id='myform'>
+            <input hidden name="img" id="uploadImage"/>
             <table class="table table-hover">
                 <tbody>
                     <tr>
@@ -33,14 +64,14 @@
                     <tr>
                         <td>头像：</td>
                         <td>
-                            <img src="/images/default.png" alt="" id="photo" width="100"
+                            <img src="/images/default.png" alt="" id="displayImage" width="100"
                                 style='border: 1px solid #ccc;margin-bottom: 5px;'>
-                            <input type="file" id="img">
+                            <input onchange="uploadImg()" type="file" id="imageInput">
                         </td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td><input type="button" id="sub" value="新增"></td>
+                        <td><input onclick="addHero()" type="button" id="sub" value="新增"></td>
                     </tr>
                 </tbody>
             </table>
